* findbugs: mostly stream closure fixes in router, apps, core